--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -21,7 +21,7 @@
             </ul>
             <div class="dropdown">
                 <div class="dropdown">
-                    <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton"
+                    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown button
                     </button>
