--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -2,11 +2,11 @@
     <div class="container pt-4">
         <div class="row">
             {{#each products}}
-            <div class="col-md-3 col-6 p-3">
+            <div class="col-md-4 col-xs-12 col-6 col-lg-3 p-3">
                 <div class="card " style="width: 17rem; height:29rem;">
                     <img src="/product-images/{{this._id}}.jpg" class="card-img-top" alt="..." style="height: 17rem;">
                     <div class="card-body">
-                        <h5 class="card-title">{{this.Price}}</h5>
+                        <h5 class="card-title">Rs: {{this.Price}}</h5>
                         <h5 class="card-title">{{this.Name}}</h5>
                         <p class="card-text">{{this.Description}}</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
