--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,16 +1,14 @@
 <section>
     <div class="container pt-4">
         <h2 class="text-center">Login</h2>
-        <form>
+        <form action="/login" method="post">
             <div class="form-group">
                 <label for="">Email address</label>
-                <input type="email" class="form-control" id="" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
+                <input type="email" class="form-control" id="" placeholder="Enter email" name="email">
             </div>
             <div class="form-group">
                 <label for="">Password</label>
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password" name="password">
             </div>
             <div>
                 <a href="/signup">already have an account ?</a>
