--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -21,6 +21,10 @@
       <td>{{this.Category}}</td>
       <td>{{this.Description}}</td>
       <td><img src="/product-images/{{this._id}}.jpg" style="width: 50px; height: 50px;"></td>
+      <td>
+        <a href="/admin/edit-product/" class="btn btn-primary">Edit</a>
+        <a href="/admin/delete-products/{{this.insertedId}}" class="btn btn-danger">Delete</a>
+        </td>
     </tr>
     {{/each}}
   </tbody>
