--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -22,8 +22,8 @@
       <td>{{this.Description}}</td>
       <td><img src="/product-images/{{this._id}}.jpg" style="width: 50px; height: 50px;"></td>
       <td>
-        <a href="/admin/edit-product/" class="btn btn-primary">Edit</a>
-        <a href="/admin/delete-products/{{this.insertedId}}" class="btn btn-danger">Delete</a>
+        <a href="/admin/edit-product?id={{this._id}}" class="btn btn-primary">Edit</a>
+        <a href="/admin/delete-product?id={{this._id}}" class="btn btn-danger">Delete</a>
         </td>
     </tr>
     {{/each}}
