--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -3,25 +3,26 @@
         <div class="row">
             <div class="col-md-6">
                 <h2 class="text-center">Edit Products</h2>
-                <form action="/admin/add-product" enctype="multipart/form-data" method="post">
+                <form action="/admin/edit-product?id={{product._id}}" enctype="multipart/form-data" method="post">
                     <div class="form-group">
                         <label for="">Name</label>
                         <input type="text" class="form-control" placeholder="Enter Name" name="Name" value="{{product.Name}}">
                     </div>
                     <div class="form-group">
                         <label for="">Category</label>
-                        <input type="text" class="form-control" placeholder="Enter Name" name="Category">
+                        <input type="text" class="form-control" placeholder="Enter Name" name="Category" value="{{product.Category}}">
                     </div>
                     <div class="form-group">
                         <label for="">Price</label>
-                        <input type="number" class="form-control" placeholder="Enter Name" name="Price">
+                        <input type="number" class="form-control" placeholder="Enter Name" name="Price" value="{{product.Price}}">
                     </div>
                     <div class="form-group">
                         <label for="">Description</label>
-                        <input type="text" class="form-control" placeholder="Enter Name" name="Description">
+                        <input type="text" class="form-control" placeholder="Enter Name" name="Description" value="{{product.Description}}">
                     </div>
                     <div class="form-group">
                         <label for="">Image</label>
+                        <img src="/product-images/{{product._id}}.jpg" style="width: 50px; height: 50px;">
                         <input type="file" class="form-control" placeholder="Enter Name" name="Image">
                     </div>
                     <button type="submit" class="btn btn-primary mt-3">Submit</button>
