--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -23,7 +23,7 @@
       <td><img src="/product-images/{{this._id}}.jpg" style="width: 50px; height: 50px;"></td>
       <td>
         <a href="/admin/edit-product?id={{this._id}}" class="btn btn-primary">Edit</a>
-        <a href="/admin/delete-product?id={{this._id}}" class="btn btn-danger">Delete</a>
+        <a href="/admin/delete-product?id={{this._id}}" class="btn btn-danger" onclick="return confirm('Are you want to delete {{this.Name}}')">Delete</a>
         </td>
     </tr>
     {{/each}}
