--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -1,6 +1,28 @@
 
 <section>
     <div class="container pt-3">
-        <h2 class="text-center">Cart is Empty</h2>
+        <table class="table mt-5">
+            <thead>
+                <tr>
+                    <th scope="col">Item</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Quantity</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each products}}
+                <tr>
+                    <td><img src="/product-image/{{this._id}}.jpg"></td>
+                    <td>{{this.Name}}</td>
+                    <td>
+                        <button class="cart-item-count mr-3">-</button>1<button class="cart-item-count ml-3">+</button>
+                    </td>
+                    <td>
+                        <a href="" class="btn btn-danger">Remove</a>
+                    </td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
     </div>
 </section>
