--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -15,7 +15,7 @@
                 <input type="password" class="form-control" placeholder="Password" name="password">
             </div>
             <div>
-                <a href="/login">create an account ?</a>
+                <a href="/login">already have an account ?</a>
                 <button type="submit" class="btn btn-primary btn-lg float-right">Submit</button>
             </div>
         </form>
