22 vedio cleared completely

--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <label for="">Image</label>
                         <img src="/product-images/{{product._id}}.jpg" style="width: 50px; height: 50px;" id="imgView">
-                        <input type="file" class="form-control" placeholder="Enter Name" name="Image" onchange="viewImage(event)">
+                        <input type="file" class="form-control"  name="Image" onchange="viewImage(event)">
                     </div>
                     <button type="submit" class="btn btn-primary mt-3">Submit</button>
                 </form>
