--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -13,7 +13,7 @@
             <tbody>
                 {{#each products}}
                 <tr>
-                    <td><img src="/product-image/{{this._id}}.jpg"></td>
+                    <td><img style="width: 70px; height:70px;" src="/product-images/{{this._id}}.jpg"></td>
                     <td>{{this.Name}}</td>
                     <td>{{this.Price}}</td>
                     <td>
