--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -9,7 +9,8 @@
                         <h5 class="card-title">Rs: {{this.Price}}</h5>
                         <h5 class="card-title">{{this.Name}}</h5>
                         <p class="card-text">{{this.Description}}</p>
-                        <a href="/add-to-cart?id={{this._id}}" class="btn btn-primary">Add to Cart</a>
+                        <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to Cart</button>
+                        
                     </div>
                 </div>
             </div>
@@ -17,3 +18,4 @@
         </div>
     </div>
 </section>
+
