--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -13,11 +13,13 @@
             <tbody>
                 {{#each products}}
                 <tr>
+                    {{#each this.product}}
                     <td><img style="width: 70px; height:70px;" src="/product-images/{{this._id}}.jpg"></td>
                     <td>{{this.Name}}</td>
                     <td>{{this.Price}}</td>
+                    {{/each}}
                     <td>
-                        <button class="cart-item-count mr-3 btn btn-info">-</button>1<button class="cart-item-count ml-3 btn btn-info">+</button>
+                        <button class="cart-item-count mr-3 btn btn-info">-</button>{{this.quantity}}<button class="cart-item-count ml-3 btn btn-info">+</button>
                     </td>
                     <td>
                         <a href="" class="btn btn-danger">Remove</a>
