--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -14,7 +14,7 @@
                     </div>
                     <div class="form-group">
                         <label for="">Price</label>
-                        <input type="number" class="form-control" placeholder="Enter Name" name="Price">
+                        <input type="Integer" class="form-control" placeholder="Enter Name" name="Price">
                     </div>
                     <div class="form-group">
                         <label for="">Description</label>
