--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -19,10 +19,13 @@
                     <td>{{this.product.Price}}</td>
                     
                     <td>
-                        <button class="cart-item-count mr-3 btn btn-info" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)">-</button>{{this.quantity}}<button class="cart-item-count ml-3 btn btn-info" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
+                        <button class="cart-item-count mr-3 btn btn-info" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',-1)">-</button>
+                        <span id="{{this.product._id}}">{{this.quantity}}</span>
+                        <button class="cart-item-count ml-3 btn btn-info" onclick="changeQuantity('{{this._id}}','{{this.product._id}}',1)">+</button>
                     </td>
                     <td>
-                        <a href="" class="btn btn-danger">Remove</a>
+                        <a href="/cart/delete-cart?id={{this._id}}" class="btn btn-danger" onclick="return confirm('Are you want to delete {{this.product.Name}}')">Remove</a>
+                        
                     </td>
                 </tr>
                 {{/each}}
@@ -30,19 +33,38 @@
         </table>
     </div>
 </section>
+<section>
+    <hr>
+        <div class="container">
+            <h3 class="float-right mt-4">Total: Rs.{{total}}</h3>
+        </div>
+        <br>
+        <div class="container" style=" margin-top:55px;">
+            <a href="/order" class="float-right btn btn-success">Place Order</a>
+        </div>
+</section>
 
 <script>
     function changeQuantity(cartId,proId,count){
+        let quantity=parseInt(document.getElementById(proId).innerHTML)
+        count=parseInt(count)
+
         $.ajax({
             url:'/change-product-quanity',
             data:{
                 cart:cartId,
                 product:proId,
-                count:count
+                count:count,
+                quantity:quantity
             },
             method:'post',
             success:(response)=>{
-                alert(response)
+                if(response.removeProduct){
+                    alert("product removed from cart")
+                    location.reload()
+                }else{
+                    document.getElementById(proId).innerHTML=quantity+count
+                }
             }
         })
     }
