--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -36,7 +36,7 @@
 <section>
     <hr>
         <div class="container">
-            <h3 class="float-right mt-4">Total: Rs.{{total}}</h3>
+            <h3 class="float-right mt-4">Total: Rs.{{cartTotal}}</h3>
         </div>
         <br>
         <div class="container" style=" margin-top:55px;">
