--- a/views/user/order.hbs
+++ b/views/user/order.hbs
@@ -1,37 +1,51 @@
 <section>
-    <div class="container pt-4">
-        <div style="width: 50%; float:left;">
-            <h4 class="text-center">Enter your details</h4>
-            <form>
+    <div class="container">
+        <form action="" id="checkout" method="post">
+            <div class="p-4" style="width: 50%; float:left;">
                 <div class="form-group">
                     <label for="">Address</label>
-                    <input type="text" class="form-control" id="" placeholder="Enter address">
+                    <input type="text" class="form-control" id="" name="address" placeholder="Enter address">
                 </div>
-
                 <div class="form-group">
-                    <label for="">Pin code</label>
-                    <input type="text" class="form-control" id="" placeholder="Enter pincode">
+                    <label for="">Pin-code</label>
+                    <input type="number" class="form-control" id="" placeholder="Enter pin-code" name="pincode">
                 </div>
-
                 <div class="form-group">
-                    <label for="">Mobile Number</label>
-                    <input type="text" class="form-control" id="" placeholder="Mobile Number">
+                    <label for="">Mobile-number</label>
+                    <input type="number" class="form-control" id="" placeholder="Enter mobile-number"
+                        name="number">
                 </div>
-            </form>
-        </div>
-        <div style="width: 50%; float: left;" class="pt-5 pl-5">
-            <form>
-                <h5 class="text-center">Total Amount: Rs.{{total}}</h5>
+            </div>
+            <div class="p-4" style="width: 50%; float:left;">
+                <h4 style="text-align: center;">Total amount: Rs:{{total}} </h4>
                 <hr>
-                <h6 class="">Payment Method</h6>
-                <input type="radio" name="same">
-                <label>COD</label>
-                <br>
-                <input type="radio" name="same">
-                <label>Online Payment</label>
-                <br>
-                <button class="btn btn-info" style="float: right;">Checkout</button>
-            </form>
-        </div>
+            </div>
+            <h4 style="text-align: left;">Payment method</h4>
+            <div class="form-group">
+                <input class="" type="radio" name="payment" id="cod" value="COD">
+                <label class="" for="">
+                    Cod
+                </label><br>
+                <input class="" type="radio" name="payment-method" id="online" value="ONLINE">
+                <label class="" for="">
+                    Online
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
+        </form>
     </div>
 </section>
+<script>
+
+    $("#checkout").submit((e) => {
+        e.preventDefault()
+        $.ajax({
+            url: '/order',
+            method: 'post',
+            data: $('#checkout').serialize(),
+            success: (response) => {
+                alert(response)
+            }
+        })
+    })
+</script>
