--- a/views/user/order.hbs
+++ b/views/user/order.hbs
@@ -14,6 +14,7 @@
                     <label for="">Mobile-number</label>
                     <input type="number" class="form-control" id="" placeholder="Enter mobile-number"
                         name="number">
+                        <input type="text" name="userId" id="" value="{{user._id}}" hidden>
                 </div>
             </div>
             <div class="p-4" style="width: 50%; float:left;">
@@ -45,6 +46,9 @@
             data: $('#checkout').serialize(),
             success: (response) => {
                 alert(response)
+                if(response.status){
+                    location.href=""
+                }
             }
         })
     })
